[gd_scene load_steps=13 format=3 uid="uid://2abefujwdjsl"]

[ext_resource type="Script" path="res://tiles/egg/EggEnemy.gd" id="1_l1sxf"]
[ext_resource type="Texture2D" uid="uid://chtb6uaw70hao" path="res://character_display/styles/pr4-character-racer.png" id="4_bowk4"]
[ext_resource type="Texture2D" uid="uid://5q3hv5k8v60n" path="res://tiles/egg/EggColor.svg" id="5_3wetp"]
[ext_resource type="Texture2D" uid="uid://b8htaupqlayja" path="res://tiles/egg/EggOutline.svg" id="6_mrex7"]
[ext_resource type="Texture2D" uid="uid://d2t1qqip08oqx" path="res://tiles/egg/EggSpots.svg" id="7_7anv0"]
[ext_resource type="Texture2D" uid="uid://dpgs5fbdpujdg" path="res://tiles/egg/EggAntennas.svg" id="8_lfc1b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ar3lm"]
radius = 34.0
height = 98.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eocsl"]
radius = 97.0
height = 344.0

[sub_resource type="Animation" id="Animation_itr6u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Display/FootFront:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Display/FootFront:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Display/FootBack:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14, -32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Display/FootBack:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Display/Egg2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -58)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Display/Egg2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8v124"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Display/FootFront:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25),
"transitions": PackedFloat32Array(0.5, 1, 2),
"update": 0,
"values": [Vector2(-21, -30), Vector2(10, -41), Vector2(31, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Display/FootFront:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35),
"transitions": PackedFloat32Array(-2, 0.5, 0.5),
"update": 0,
"values": [1.13272, -0.792379, 0.0349066]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Display/FootBack:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.2, 0.3),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(31, -32), Vector2(-21, -30), Vector2(10, -41)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Display/FootBack:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5, -2),
"update": 0,
"values": [-0.792379, 0.0349066, 1.13272]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Display/Egg2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, -58), Vector2(16, -53), Vector2(8, -58), Vector2(16, -53)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Display/Egg2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.111701, 0.225147, 0.111701, 0.225147]
}

[sub_resource type="Animation" id="Animation_h882w"]
resource_name = "walk"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Display/FootFront:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.85),
"transitions": PackedFloat32Array(2, 0.5, 2, 1),
"update": 0,
"values": [Vector2(-16, -40), Vector2(0, -42), Vector2(16, -32), Vector2(-13, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Display/FootFront:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.55),
"transitions": PackedFloat32Array(0.5, 2, 2),
"update": 0,
"values": [0.226893, -0.336849, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Display/FootBack:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35, 0.5, 0.75),
"transitions": PackedFloat32Array(2, 1, 2, 0.5),
"update": 0,
"values": [Vector2(16, -32), Vector2(-13, -32), Vector2(-16, -40), Vector2(0, -42)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Display/FootBack:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.05, 0.5, 0.85),
"transitions": PackedFloat32Array(2, 0.5, 2),
"update": 0,
"values": [0.0, 0.226893, -0.336849]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Display/Egg2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.8),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -58), Vector2(0, -61), Vector2(0, -58), Vector2(0, -61)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Display/Egg2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.8),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0.0, -0.0523599, 0.0, -0.0523599]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1vgd"]
_data = {
"RESET": SubResource("Animation_itr6u"),
"run": SubResource("Animation_8v124"),
"walk": SubResource("Animation_h882w")
}

[node name="EggEnemy" type="CharacterBody2D"]
script = ExtResource("1_l1sxf")

[node name="Display" type="Node2D" parent="."]

[node name="FootBack" type="Node2D" parent="Display"]
position = Vector2(14, -32)
scale = Vector2(0.55, 0.55)

[node name="Color" type="Sprite2D" parent="Display/FootBack"]
self_modulate = Color(0.392157, 0.47451, 0.807843, 1)
texture = ExtResource("4_bowk4")
region_enabled = true
region_rect = Rect2(352, 448, 128, 128)

[node name="Lines" type="Sprite2D" parent="Display/FootBack"]
texture = ExtResource("4_bowk4")
region_enabled = true
region_rect = Rect2(352, 160, 128, 128)

[node name="Egg2" type="Node2D" parent="Display"]
position = Vector2(0, -58)
scale = Vector2(0.5, 0.5)

[node name="EggColor" type="Sprite2D" parent="Display/Egg2"]
self_modulate = Color(0.74902, 0.101961, 0.101961, 1)
position = Vector2(-1, 0)
texture = ExtResource("5_3wetp")

[node name="EggOutline" type="Sprite2D" parent="Display/Egg2"]
texture = ExtResource("6_mrex7")

[node name="EggSpots" type="Sprite2D" parent="Display/Egg2"]
self_modulate = Color(0, 1, 0.6, 1)
position = Vector2(39, -41)
texture = ExtResource("7_7anv0")

[node name="EggAntennas" type="Sprite2D" parent="Display/Egg2"]
position = Vector2(60, -109)
texture = ExtResource("8_lfc1b")

[node name="FootFront" type="Node2D" parent="Display"]
position = Vector2(-16, -32)
scale = Vector2(0.55, 0.55)

[node name="Color" type="Sprite2D" parent="Display/FootFront"]
self_modulate = Color(0.392157, 0.47451, 0.807843, 1)
texture = ExtResource("4_bowk4")
region_enabled = true
region_rect = Rect2(352, 448, 128, 128)

[node name="Lines" type="Sprite2D" parent="Display/FootFront"]
texture = ExtResource("4_bowk4")
region_enabled = true
region_rect = Rect2(352, 160, 128, 128)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -49)
shape = SubResource("CapsuleShape2D_ar3lm")

[node name="SightArea" type="Area2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 3
monitorable = false

[node name="SightArea" type="CollisionShape2D" parent="SightArea"]
position = Vector2(138, -97)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_eocsl")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h1vgd")
}
autoplay = "walk"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
